octree creation from voxel-grid

--- a/voxelization.ipynb
+++ b/voxelization.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyntcloud import PyntCloud\n",
+    "#from pyntcloud import PyntCloud\n",
     "import open3d as o3d\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA"
@@ -14,29 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'open3d.cpu.pybind.geometry.VoxelGrid' object has no attribute 'o3d'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-af10e062e113>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moctree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvoxel_grid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mo3d\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeometry\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOctree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_from_voxel_grid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#o3d.visualization.draw_geometries([octree])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'open3d.cpu.pybind.geometry.VoxelGrid' object has no attribute 'o3d'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "octree = voxel_grid.o3d.geometry.Octree.create_from_voxel_grid()\n",
-    "#o3d.visualization.draw_geometries([octree])"
+    "octree = o3d.geometry.Octree(2)\n",
+    "octree.create_from_voxel_grid(voxel_grid)\n",
+    "\n",
+    "#octree.convert_from_point_cloud(pcd)\n",
+    "o3d.visualization.draw_geometries([octree])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
