--- a/voxelization.ipynb
+++ b/voxelization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,32 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "octree = o3d.geometry.Octree(2)\n",
+    "pcd = o3d.io.read_point_cloud(\"finalproject.ply\")\n",
+    "voxel_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(pcd,\n",
+    "                                                            voxel_size=50)\n",
+    "octree = o3d.geometry.Octree(8)\n",
     "octree.create_from_voxel_grid(voxel_grid)\n",
     "\n",
-    "#octree.convert_from_point_cloud(pcd)\n",
     "o3d.visualization.draw_geometries([octree])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "voxel_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(pcd,\n",
-    "                                                            voxel_size=50)\n",
-    "\n",
-    "#o3d.visualization.draw_geometries([voxel_grid])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
